# hermes-agent

./: .flake8  .gitignore  AGENTS.md  IDEAS.json  PLAN.md  README.md  TASKS.md  TEST_REPORT.json  cli.py  generate_report.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: devcontainer-validation.yml
agent/: adaptive_routing_config.py  adaptive_routing_state.py  adaptive_task_classifier.py  chat_completion_helpers.py  system_prompt.py
docs/plans/: adaptive-model-router-and-reasoning.md
gateway/: slash_commands.py
hermes_cli/: _parser.py  cli_commands_mixin.py  config.py  main.py  sister_registry.py
hermes_cli/subcommands/: memory.py  sister.py
scripts/: auto_improvement_reports.py
templates/data-analysis/: manifest.yaml  skill.json
templates/devops/: manifest.yaml  skill.json
templates/skill_template/: .flake8  manifest.yaml  pyproject.toml  skill.json
templates/skill_template/context/: README.md
templates/skill_template/docs/: usage_example.md
templates/skill_template/hermes_skill_template.egg-info/: PKG-INFO  SOURCES.txt
templates/skill_template/scripts/: sample_skill.py
templates/skill_template/tests/: test_sample_skill.py
templates/web-dev/: manifest.yaml  skill.json
tests/agent/: test_adaptive_routing_config.py  test_adaptive_routing_state.py  test_adaptive_task_classifier.py
tests/cli/: test_personality_none.py
tests/hermes_cli/: test_config.py
tests/scripts/: test_auto_improvement_reports.py
tools/: delegate_to_sister.py  delegate_tool.py  memory_decay.py  memory_tool.py  web_tools.py
(+8 files in other folders)
